Flask API routes to Swagger YAML preparation and the same YAML file to Excell sheet preparation process completed.
